--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,4 +40,4 @@ jobs:
      # run tests!
      - run:
          name: Start Selenium Test on Browser Stack & send slack notification & this is demo
-         command:  mvn -X clean ; mvn -X compile ; mvn exec:java
+         command:  mvn -X clean ; mvn -X compile ; mvn test
