Resolved the issues rlated to verify hyper links

--- a/test-output/old/Suite1/ChimpUISmokeTestSuiteOne.properties
+++ b/test-output/old/Suite1/ChimpUISmokeTestSuiteOne.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=ChimpUISmokeTestSuiteTwo][SuiteResult context=ChimpUISmokeTestSuiteOne]
+[SuiteResult context=ChimpUISmokeTestSuiteSendMail][SuiteResult context=ChimpUISmokeTestSuiteTwo][SuiteResult context=ChimpUISmokeTestSuiteOne]
