--- a/test-output/old/Suite1/ChimpUISmokeTestSuiteTwo.properties
+++ b/test-output/old/Suite1/ChimpUISmokeTestSuiteTwo.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=ChimpUISmokeTestSuiteSendMail][SuiteResult context=ChimpUISmokeTestSuiteTwo][SuiteResult context=ChimpUISmokeTestSuiteOne]
+[SuiteResult context=ChimpUISmokeTestSuiteTwo][SuiteResult context=ChimpUISmokeTestSuiteOne]
